# advanced_crag

./: README.md  craig.ipynb  pyproject.toml  test_ollama.ipynb
