[tool.poetry]
name = "langgraph-crag"
version = "0.1.0"
description = ""
authors = ["Peter Landis <peterlandis@northwesternmutual.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.2.16"
ipykernel = "6.29.5"
python-dotenv = "1.0.1"
langchain-community = "0.2.16"
tiktoken = "^0.7.0"
chromadb = "^0.5.5"
langchainhub = "^0.1.21"
langchain-ollama = "^0.1.3"
bs4 = "^0.0.2"
scikit-learn = "^1.5.1"
langgraph = "^0.2.18"
langchain-openai = "^0.1.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"